[package]
name = "tor-fast-bootstrap"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
# Arti crates (pinned to official repo)
arti-client = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4", features = ["tokio", "native-tls", "experimental-api"] }
tor-checkable = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }
tor-circmgr = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }
tor-netdir = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }
tor-netdoc = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }
tor-rtcompat = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4", features = ["tokio", "native-tls"] }
tor-consdiff = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }
tor-dircommon = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }
tor-llcrypto = { git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "af3a26550eec96b5852e6162ec06a38a13c70dc4" }

# External
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
rand = "0.9"
humantime = "2"
futures = "0.3"
async-compression = { version = "0.4", features = ["futures-io", "zlib", "xz", "zstd"] }
base64ct = { version = "1.8", features = ["alloc"] }
sha3 = "0.10"
digest = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false }
brotli = "8"
flate2 = "1"
axum = "0.8"
