[package]
name = "tor-fast-bootstrap"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
# Arti crates (crates.io)
arti-client = { version = "0.40.0", features = ["tokio", "native-tls", "experimental-api"] }
tor-checkable = "0.40.0"
tor-circmgr = "0.40.0"
tor-netdir = "0.40.0"
tor-netdoc = "0.40.0"
tor-rtcompat = { version = "0.40.0", features = ["tokio", "native-tls"] }
tor-consdiff = "0.40.0"
tor-dircommon = "0.40.0"
tor-llcrypto = "0.40.0"

# External
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
rand = "0.9"
humantime = "2"
futures = "0.3"
async-compression = { version = "0.4", features = ["futures-io", "zlib", "xz", "zstd"] }
base64ct = { version = "1.8", features = ["alloc"] }
sha3 = "0.10"
digest = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false }
brotli = "8"
flate2 = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
